<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="@dimen/_2sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageView
            android:id="@+id/iv_tick"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/dash_insta" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        style="@style/myTextviewBold"
        android:text="@string/instagram"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/myTextviewBold"
        android:gravity="center"
        android:padding="@dimen/_3sdp"
        android:text="@string/error_log"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/myTextviewBold"
            android:padding="@dimen/_3sdp"
            android:textAlignment="center"
            android:textColor="@color/unselText"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>

    <View
        android:layout_width="@dimen/_2sdp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_box_dash"
            style="@style/myTextviewBold"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_box_dash"
            style="@style/myTextviewBold"
            android:gravity="center"
            android:text="Cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
